# github-actions-openstack

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  config.sample.toml  config.sample.yml  docker-compose.yml  flake.nix  main.py  pyproject.toml
.github/workflows/: ci.yaml
contrib/: uwsgi.ini
scripts/: start.sh
src/: cloud_config.rs  config.rs  main.rs
