[package]
name = "github-actions-openstack"
version = "0.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
axum-github-hooks = "0.1.0"
base64 = "0.22.1"
chrono = "0.4.41"
config = "0.15.11"
futures = "0.3.31"
octocrab = "0.44.1"
openstack_sdk = "0.22.0"
openstack_types = "0.21.0"
rand = "0.9.1"
serde = "1.0.219"
serde_yaml = "0.9.34"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["rt-multi-thread"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }

[patch.crates-io]
axum-github-hooks = { git = "https://github.com/mnaser/axum-github-hooks.git", branch = "axum-core-ify" }
